20230113 - dark mode user beres, sisa dark mode laundry + setting dark mode #EntahSiapaYangSalah #SudahTidakFokus

--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AboutUs"
+    android:id="@+id/parentLayoutAboutUs"
     android:background="#1572A1">
 
     <ImageView
