--- a/app/src/main/res/layout/activity_registrasi.xml
+++ b/app/src/main/res/layout/activity_registrasi.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#1572A1"
+    android:background="@color/blue"
     android:orientation="vertical"
-    tools:context=".Registrasi">
+    tools:context=".Registrasi"
+    android:id="@+id/parentLayout">
 
     <!--    <TextView
         android:id="@+id/rgsfullName"
@@ -88,6 +89,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <FrameLayout
+        android:id="@+id/frameLayout"
         android:layout_width="350dp"
         android:layout_height="400dp"
         android:layout_gravity="center"
