--- a/app/src/main/res/drawable/belakangcategoryorderdark.xml
+++ b/app/src/main/res/drawable/belakangcategoryorderdark.xml
@@ -2,8 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/blue" />
+    <solid android:color="@color/lightbluex" />
     <corners
-        android:bottomRightRadius="20dp"
-        android:bottomLeftRadius="20dp" />
+        android:radius="28dp"/>
 </shape>
