--- a/app/src/main/res/drawable/borderlogout.xml
+++ b/app/src/main/res/drawable/borderlogout.xml
@@ -3,6 +3,6 @@
 
     <solid android:color="#ffffff"/>
     <stroke android:width="3dp"
-        android:color="#000000"/>
+        android:color="#b8b4b4"/>
 
 </shape>
