--- a/app/src/main/res/layout/activity_artikel.xml
+++ b/app/src/main/res/layout/activity_artikel.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Artikel">
+    tools:context=".Artikel"
+    android:id="@+id/parentLayout">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerArtikel"
