--- a/app/src/main/res/layout/activity_category_lain.xml
+++ b/app/src/main/res/layout/activity_category_lain.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#1572A1"
-    tools:context=".CategoryLain">
+    android:background="@color/blue"
+    tools:context=".CategoryLain"
+    android:id="@+id/parentLayout">
 
     <SearchView
         android:id="@+id/searchView"
