--- a/app/src/main/res/layout/activity_pickup.xml
+++ b/app/src/main/res/layout/activity_pickup.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#1572A1"
-    tools:context=".Pickup">
+    android:background="@color/blue"
+    tools:context=".Pickup"
+    android:id="@+id/parentLayout">
 
 
     <!--    <androidx.constraintlayout.widget.ConstraintLayout-->
