--- a/app/src/main/res/layout/laundrylist_home.xml
+++ b/app/src/main/res/layout/laundrylist_home.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="28dp"
     android:layout_marginTop="6dp"
-    app:cardBackgroundColor="#9AD0EC"
+    app:cardBackgroundColor="@color/lightblue"
     android:id="@+id/parentLayout">
 
     <androidx.constraintlayout.widget.ConstraintLayout
